# rust-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/plans/: 2025-01-17-hot-path-optimization.md  2025-01-17-integration-tests.md  2026-01-17-context-refactoring-design.md  2026-01-17-context-refactoring.md  2026-01-17-runtime-settings-design.md  2026-01-17-runtime-settings-implementation.md  2026-01-17-settings-value-cache-design.md  2026-01-18-python-rust-parity-implementation.md  2026-01-18-python-rust-parity-plan.md  2026-01-18-struct-log-refactoring-design.md  2026-01-18-struct-log-refactoring.md  2026-01-18-sync-secrets-loading-design.md  2026-01-18-sync-secrets-loading.md  2026-01-19-vault-client-design.md  2026-01-19-vault-client-implementation.md  2026-01-19-vault-full-path-design.md
example/: .envrc.example  Cargo.toml  settings.json
example/src/: consts.rs  main.rs  middleware.rs  settings.rs
example/src/web/: mod.rs  router.rs
example/src/web/handlers/: health.rs  mod.rs  test_rs.rs
lib/runtime-settings/: Cargo.toml  README.md
lib/runtime-settings/src/: context.rs  entities.rs  error.rs  filters.rs  lib.rs  rs.rs  scoped.rs  settings.rs  setup.rs  watchers.rs
lib/runtime-settings/src/filters/: dynamic_filters.rs  mod.rs  static_filters.rs
lib/runtime-settings/src/providers/: env.rs  file.rs  mcs.rs  microservice.rs  mod.rs
lib/runtime-settings/src/secrets/: mod.rs  resolver.rs
lib/runtime-settings/tests/: integration_filters.rs  integration_mcs.rs  integration_vault.rs
lib/struct-log/: Cargo.toml  README.md
lib/struct-log/src/: builder.rs  error.rs  formatting_layer.rs  lib.rs  setup.rs  storage.rs  tracing.rs
lib/struct-log/tests/: e2e.rs
lib/vault-client/: Cargo.toml
lib/vault-client/src/: client.rs  error.rs  lib.rs  models.rs
lib/vault-client/src/auth/: kubernetes.rs  manager.rs  mod.rs  oidc.rs  oidc_cache.rs  token.rs  token_info.rs
src/: context.rs  entities.rs  filters.rs  lib.rs  main.rs  rs.rs  settings.rs
src/providers/: file.rs  microservice.rs  mod.rs
