[package]
name = "runtime-settings"
version = "0.1.0"
authors = ["o.ermakov <o.ermakov@cian.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
bytes="0.5"

log = "0.4"
pretty_env_logger = "0.4"

serde = { version = "1.0", features = ["derive"] }

serde_json ="1.0"

regex = "1"

async-trait = "0.1.30"