[package]
name = "cian-settings"
version = "0.1.0"
authors = ["o.ermakov <o.ermakov@cian.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.14", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1.13.0", features = ["full"] }
bytes="0.5"

log = "0.4"
pretty_env_logger = "0.4"
lazy_static = "1.4.0"

serde = { version = "1.0", features = ["derive"] }

serde_json ="1.0"

regex = "1"

async-trait = "0.1.30"

futures = "0.3.5"

[[bin]]
name = "rs"
path = "src/main.rs"