[workspace]
resolver = "2"
members = [
    "lib/struct-log",
    "lib/runtime-settings",
    "example"
]

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }

# Utilities
gethostname = "1"