[package]
name = "example"
version = "0.1.0"
edition = "2021"


[dependencies]
# async runtime
tokio = { version = "1.13.0", features = ["full"] }

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# web
axum = "0.5.6"

# Logs
tracing = "0.1"
struct-log = { path = "../lib/struct-log" }

# cli
structopt = "0.3.25"

runtime-settings = { path = "../lib/runtime-settings" }
