[package]
name = "example"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# web
axum = "0.8"
tower = "0.5"

# Logs
struct-log = { path = "../lib/struct-log" }

# cli
clap = { version = "4", features = ["derive"] }

runtime-settings = { path = "../lib/runtime-settings" }
