[package]
name = "runtime-settings"
version = "0.1.0"
authors = ["o.ermakov <oleg@ermakov.cc>"]
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["client", "http1"]}
hyper-tls = "0.5"
tokio = { version = "1.16", features = ["fs"]}
async-trait = "0.1"
bytes="1.5"

tracing = "0.1"
lazy_static = "1.4"

serde = { version = "1.0", features = ["derive"] }

serde_json ="1.0"

regex = "1.10"

[dev-dependencies]
tokio = {version = "1.16", features = ["macros"]}