[package]
name = "runtime-settings"
version = "0.2.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "fs"] }
async-trait = "0.1"

# HTTP
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"

# Vault
vaultrs = "0.7"

# Utilities
thiserror = "2"
tracing = "0.1"
regex = "1"
semver = "1"
rand = "0.8"
gethostname = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
