[package]
name = "runtime-settings"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
gethostname.workspace = true

# Async
async-trait = "0.1"

# HTTP
reqwest = { version = "0.13", features = ["json", "query"] }

# Serialization
json5 = "1"

# Vault
vault-client = { path = "../vault-client" }

# Utilities
futures = "0.3"
thiserror = "2"
regex = "1"
semver = "1"
rand = "0.9"
dashmap = "6"
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
wiremock = "0.6"
