[package]
name = "struct-log"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-core = "0.1.21"
tracing-log = { version = "0.1" }
tracing-appender = "0.2.0"
tracing-bunyan-formatter = "0.3.1"
tracing = { version = "0.1.13", default-features = false, features = ["log", "std"] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["registry", "fmt", "env-filter"] }

log = "0.4.8"
time = { version = "0.3", default-features = false, features = ["formatting"] }
gethostname = "0.2.1"

serde = { version = "1.0"}
serde_json = "1.0"

# jaeger
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
tracing-opentelemetry = "0.17.4"
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
lazy_static = "1.4.0"

[dev-dependencies]
tracing = { version = "0.1.13", default-features = false, features = ["log", "std", "attributes"] }
time = { version = "0.3", default-features = false, features = ["formatting", "parsing", "local-offset"] }