[package]
name = "struct-log"
version = "0.5.0"
edition = "2021"

[dependencies]
tracing-core = "0.1"
tracing-log = { version = "0.2" }
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "fmt", "env-filter"] }

log = "0.4"
time = { version = "0.3", default-features = false, features = ["formatting"] }
gethostname = "1"

serde = { version = "1.0"}
serde_json = "1.0"


[dev-dependencies]
lazy_static = "1.4"
tracing = { version = "0.1", default-features = false, features = ["log", "std", "attributes"] }
time = { version = "0.3", default-features = false, features = ["formatting", "parsing", "local-offset"] }