[package]
name = "struct-log"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
gethostname.workspace = true

tracing-core = "0.1"
tracing-log = "0.2"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "fmt", "env-filter"] }

log = "0.4"
time = { version = "0.3", default-features = false, features = ["formatting"] }

[dev-dependencies]
tracing = { version = "0.1", default-features = false, features = ["log", "std", "attributes"] }
time = { version = "0.3", default-features = false, features = ["formatting", "parsing", "local-offset"] }
