[package]
name = "vault-client"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
vaultrs = "0.7"
tokio = { version = "1", features = ["sync", "time", "rt", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
sha2 = "0.10"
webbrowser = "1"
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
tempfile = "3"
